tests/ui/static_on_value.stderr
Error [E0311]: `unit` is a static method on `Point`
  --> tests/ui/static_on_value.jet:11:13
    |
 11 |     print(p.unit());
    |             ^^^^
 Why: static methods belong to the type name, not a value
 Fix: write `Point.unit(...)` instead
