tests/ui/static_on_value.jet
struct Point {
    x: Int;

    fn unit() -> Point {
        return Point { x: 0 };
    }
}

fn main() {
    val p = Point { x: 1 };
    print(p.unit());
}
